Changes for Sandbox 2.4.1
-------------------------

Changes:

* Google +1 support dropped since it's shut down now.

Bugs:

* Fixed an issue when selecting the Buenos Aires timezone.

Changes for Sandbox 2.4
-----------------------

Changes:

* Updated how mobile icons are handled.
* User agent string has been raised to 255 since more browser agents are using long strings these days.
* Password security has been updated to stronger hashing standards. As a result, PHP 5.5.0 or higher is now required.
* Social media submissions are now being linked directly to their submission URLs instead of being processed by Sandbox first.
* Added user email validation support.
* User listing in the ACP will now paginate to avoid long queries.
* Terms of Use can now be specified in the ACP for new users.
* Updated Google Analytics support so that the codebase doesn't need to be updated every time they change the tracking code snippet.
* Added support for server and user timezone settings.
* XTemplate library has been swapped for a better performing version called zTemplate.
* Replaced the Akismet library with my own hand rolled version.

Bugs:

* Active user agent list didn't have sufficient space for an IPv6 address to display clearly.
* Bare URLs entered into posts were getting stray single quotes placed around them.
* Crash if all permissions are unset on a user edit.
* BBCode menu was not functional on the random quotes editor.
* Fixed an issue with the emoticon editor in the ACP.
* Submitting a false positive on a comment was calling an invalid function name.
* User count stats were referencing the wrong variable and giving inaccurate counts.
* Comments were not correctly storing IP addresses.
* Editing comments does not handle request_uri properly.
* Profile page should no longer improperly autocomplete stylesheet and password fields.
* Blogroll editing was not handling https:// links properly.